Nav styling ish

--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <header class="header">
+    <div>logo tzava</div>
     <ul class="nav nav--main">
       <li><a href="#">Home</a></li>
       <li><a href="#">Listings</a></li>
@@ -17,6 +18,15 @@
       <li><a href="#">Account</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
+    
+    <!-- <div class="nav--dropdown">
+        <button class="dropbtn">Sign in</button>
+        <div class="dropdown__content">
+          <a>Facebook</a>
+          <a>Twitter</a>
+          <a>Gmail</a>
+        </div>
+    </div> -->
   </header>
 
   <main>
