--- a/html/index.html
+++ b/html/index.html
@@ -5,12 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link rel="stylesheet" href="../css/index.css">
+  <link rel="stylesheet" href="../assets/css/styles.css">
   <title>Cinder</title>
 </head>
 <body>
   <header class="header">
-    <div>logo tzava</div>
     <ul class="nav nav--main">
       <li><a href="#">Home</a></li>
       <li><a href="#">Listings</a></li>
@@ -29,9 +28,66 @@
     </div> -->
   </header>
 
-  <main>
+  <main class="main-content">
     <section class="places">
-      
+      <div class="grid">
+
+        <a href="#" class="grid__item">
+          <article class="card">
+            <aside class="card__image"></aside>
+            <div class="card__content">
+              <h2 class="card__title"></h2>
+              <footer class="card__footer">
+              </footer>
+            </div>
+          </article>
+        </a>
+
+        <a href="#" class="grid__item">
+          <article class="card">
+            <aside class="card__image"></aside>
+            <div class="card__content">
+              <h2 class="card__title"></h2>
+              <footer class="card__footer">
+              </footer>
+            </div>
+          </article>
+        </a>
+
+        <a href="#" class="grid__item">
+          <article class="card">
+            <aside class="card__image"></aside>
+            <div class="card__content">
+              <h2 class="card__title"></h2>
+              <footer class="card__footer">
+              </footer>
+            </div>
+          </article>
+        </a>
+
+        <a href="#" class="grid__item">
+          <article class="card">
+            <aside class="card__image"></aside>
+            <div class="card__content">
+              <h2 class="card__title"></h2>
+              <footer class="card__footer">
+              </footer>
+            </div>
+          </article>
+        </a>
+
+        <a href="#" class="grid__item">
+          <article class="card">
+            <aside class="card__image"></aside>
+            <div class="card__content">
+              <h2 class="card__title"></h2>
+              <footer class="card__footer">
+              </footer>
+            </div>
+          </article>
+        </a>
+
+      </div>
     </section>
   </main>
 
