--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link rel="stylesheet" href="assets/css/styles.csss">
+  <link rel="stylesheet" href="assets/css/styles.css">
   <title>Cinder</title>
 </head>
 <body>
