--- a/index.html
+++ b/index.html
@@ -10,22 +10,27 @@
 </head>
 <body>
   <header class="header">
-    <ul class="nav nav--main">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Listings</a></li>
-      <li><a href="#">Places</a></li>
-      <li><a href="#">Account</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-    
-    <!-- <div class="nav--dropdown">
-        <button class="dropbtn">Sign in</button>
-        <div class="dropdown__content">
-          <a>Facebook</a>
-          <a>Twitter</a>
-          <a>Gmail</a>
+      <div class="title">
+          <div class="title-text">
+          <h1  class="title-text__h1"><a>Public Study</a></h1>
+          <h3  class="title-text__h3"><a>-Meet study mates-</a></h3>
+          </div>
+       <ul class="nav nav--main">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Listings</a></li>
+            <li><a href="#">Places</a></li>
+            <li><a href="#">Account</a></li>
+            <li><a href="#">About</a></li>
+          </ul>
+          <div class="nav--dropdown">
+              <div class="dropbtn"><a>Sign in</a></div>
+              <div class="dropdown__content">
+                <a>Facebook</a>
+                <a>Twitter</a>
+                <a>Gmail</a>
+                </div>
+           </div>
         </div>
-    </div> -->
   </header>
 
   <main class="main-content">
@@ -36,7 +41,7 @@
           <article class="card">
             <aside class="card__image"></aside>
             <div class="card__content">
-              <h2 class="card__title"></h2>
+              <h2 class="card__title">Carturesti</h2>
               <footer class="card__footer">
               </footer>
             </div>
