style for the header

--- a/index.html
+++ b/index.html
@@ -1,102 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+  <link href="https://fonts.googleapis.com/css?family=Droid+Serif" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/styles.css">
+
   <title>Cinder</title>
 </head>
+
 <body>
-  <header class="header">
+  <div class="container">
+    <header class="header">
       <div class="title">
-          <div class="title-text">
-          <h1  class="title-text__h1"><a>Public Study</a></h1>
-          <h3  class="title-text__h3"><a>-Meet study mates-</a></h3>
+        <a class="title-text" href="#">
+          <h1 class="title-text__h1">Public Study</h1>
+          <h3 class="title-text__h3">Meet study mates</h3>
+        </a>
+        <ul class="nav nav--main">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Listings</a></li>
+          <li><a href="#">Places</a></li>
+          <li><a href="#">Account</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
+        <div class="nav--dropdown">
+          <div class="dropdown__button"><a href="#">Sign in</a></div>
+          <div class="dropdown__content">
+            <ul>
+              <li><a href="#">Facebook</a></li>
+              <li><a href="#">Twitter</a></li>
+              <li><a href="#">Gmail</a></li>
+            </ul>
           </div>
-       <ul class="nav nav--main">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Listings</a></li>
-            <li><a href="#">Places</a></li>
-            <li><a href="#">Account</a></li>
-            <li><a href="#">About</a></li>
-          </ul>
-          <div class="nav--dropdown">
-              <div class="dropbtn"><a>Sign in</a></div>
-              <div class="dropdown__content">
-                <a>Facebook</a>
-                <a>Twitter</a>
-                <a>Gmail</a>
-                </div>
-           </div>
         </div>
-  </header>
-
-  <main class="main-content">
-    <section class="places">
-      <div class="grid">
-
-        <a href="#" class="grid__item">
-          <article class="card">
-            <aside class="card__image"></aside>
-            <div class="card__content">
-              <h2 class="card__title">Carturesti</h2>
-              <footer class="card__footer">
-              </footer>
-            </div>
-          </article>
-        </a>
-
-        <a href="#" class="grid__item">
-          <article class="card">
-            <aside class="card__image"></aside>
-            <div class="card__content">
-              <h2 class="card__title"></h2>
-              <footer class="card__footer">
-              </footer>
-            </div>
-          </article>
-        </a>
-
-        <a href="#" class="grid__item">
-          <article class="card">
-            <aside class="card__image"></aside>
-            <div class="card__content">
-              <h2 class="card__title"></h2>
-              <footer class="card__footer">
-              </footer>
-            </div>
-          </article>
-        </a>
-
-        <a href="#" class="grid__item">
-          <article class="card">
-            <aside class="card__image"></aside>
-            <div class="card__content">
-              <h2 class="card__title"></h2>
-              <footer class="card__footer">
-              </footer>
-            </div>
-          </article>
-        </a>
-
-        <a href="#" class="grid__item">
-          <article class="card">
-            <aside class="card__image"></aside>
-            <div class="card__content">
-              <h2 class="card__title"></h2>
-              <footer class="card__footer">
-              </footer>
-            </div>
-          </article>
-        </a>
-
       </div>
-    </section>
-  </main>
+    </header>
 
-  <footer class="footer">
+    <main class="main-content">
+      <section class="places">
+        <div class="grid">
+
+          <a href="#" class="grid__item">
+            <article class="card">
+              <aside class="card__image"></aside>
+              <div class="card__content">
+                <h2 class="card__title">Carturesti</h2>
+                <footer class="card__footer">
+                </footer>
+              </div>
+            </article>
+          </a>
+
+          <a href="#" class="grid__item">
+            <article class="card">
+              <aside class="card__image"></aside>
+              <div class="card__content">
+                <h2 class="card__title"></h2>
+                <footer class="card__footer">
+                </footer>
+              </div>
+            </article>
+          </a>
+
+          <a href="#" class="grid__item">
+            <article class="card">
+              <aside class="card__image"></aside>
+              <div class="card__content">
+                <h2 class="card__title"></h2>
+                <footer class="card__footer">
+                </footer>
+              </div>
+            </article>
+          </a>
+
+          <a href="#" class="grid__item">
+            <article class="card">
+              <aside class="card__image"></aside>
+              <div class="card__content">
+                <h2 class="card__title"></h2>
+                <footer class="card__footer">
+                </footer>
+              </div>
+            </article>
+          </a>
+
+          <a href="#" class="grid__item">
+            <article class="card">
+              <aside class="card__image"></aside>
+              <div class="card__content">
+                <h2 class="card__title"></h2>
+                <footer class="card__footer">
+                </footer>
+              </div>
+            </article>
+          </a>
+
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
       <ul class="nav nav--footer">
         <li><a href="#">Home</a></li>
         <li><a href="#">Listings</a></li>
@@ -105,5 +113,7 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </footer>
+  </div>
 </body>
+
 </html>
