--- a/index.html
+++ b/index.html
@@ -58,48 +58,56 @@
           </a>
 
           <a href="#" class="grid__item">
-            <article class="card">
-              <aside class="card__image"></aside>
-              <div class="card__content">
-                <h2 class="card__title"></h2>
-                <footer class="card__footer">
-                </footer>
-              </div>
-            </article>
-          </a>
+              <article class="card">
+                <div class="card__content">
+                      <h2 class="card__title">Carturesti</h2>
+                      <ul class="card__content--info">
+                        <li>Favourite language-Java</li>
+                        <li>Most active colaborator- Gelu Popescu Al Treilea</li>
+                      </ul>
+                </div>
+                <aside class="card__image"></aside>
+              </article>
+            </a>
 
           <a href="#" class="grid__item">
-            <article class="card">
-              <aside class="card__image"></aside>
-              <div class="card__content">
-                <h2 class="card__title"></h2>
-                <footer class="card__footer">
-                </footer>
-              </div>
-            </article>
-          </a>
+                <article class="card">
+                  <div class="card__content">
+                        <h2 class="card__title">Carturesti</h2>
+                        <ul class="card__content--info">
+                          <li>Favourite language-Java</li>
+                          <li>Most active colaborator- Gelu Popescu Al Treilea</li>
+                        </ul>
+                  </div>
+                  <aside class="card__image"></aside>
+                </article>
+            </a>
 
-          <a href="#" class="grid__item">
-            <article class="card">
-              <aside class="card__image"></aside>
-              <div class="card__content">
-                <h2 class="card__title"></h2>
-                <footer class="card__footer">
-                </footer>
-              </div>
-            </article>
-          </a>
+            <a href="#" class="grid__item">
+                <article class="card">
+                  <div class="card__content">
+                        <h2 class="card__title">Carturesti</h2>
+                        <ul class="card__content--info">
+                          <li>Favourite language-Java</li>
+                          <li>Most active colaborator- Gelu Popescu Al Treilea</li>
+                        </ul>
+                  </div>
+                  <aside class="card__image"></aside>
+                </article>
+            </a>
 
-          <a href="#" class="grid__item">
-            <article class="card">
-              <aside class="card__image"></aside>
-              <div class="card__content">
-                <h2 class="card__title"></h2>
-                <footer class="card__footer">
-                </footer>
-              </div>
-            </article>
-          </a>
+            <a href="#" class="grid__item">
+                <article class="card">
+                  <div class="card__content">
+                        <h2 class="card__title">Carturesti</h2>
+                        <ul class="card__content--info">
+                          <li>Favourite language-Java</li>
+                          <li>Most active colaborator- Gelu Popescu Al Treilea</li>
+                        </ul>
+                  </div>
+                  <aside class="card__image"></aside>
+                </article>
+             </a>
 
         </div>
       </section>
