Added places and listings

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
           <h3 class="title-text__h3">Meet study mates</h3>
         </a>
         <ul class="nav nav--main">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Listings</a></li>
-          <li><a href="#">Places</a></li>
-          <li><a href="#">Account</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="listings.html">Listings</a></li>
+          <li><a href="places.html">Places</a></li>
+          <li><a href="account.html">Account</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>
         <div class="nav--dropdown">
           <div class="dropdown__button"><a href="#">Sign in</a></div>
@@ -44,6 +44,7 @@
     <main class="main-content">
       <section class="places">
         <div class="grid">
+          
           <a href="#" class="grid__item">
             <article class="card">
               <div class="card__content">
