--- a/listingForm.html
+++ b/listingForm.html
@@ -10,11 +10,11 @@
 <body>
 <form  class="listings__form">
 <ul class="listings__form-list">
-    <li class="list-step"><span>1</span></li>
-    <li class="list-step"><span>2</span></li>
-    <li class="list-step"><span>3</span></li>
-    <li class="list-step"><span>4</span></li>
-    <li class="list-step"><span>5</span></li>
+    <li class="list-step" id="first"><span>1</span></li>
+    <li class="list-step" id="second"><span>2</span></li>
+    <li class="list-step" id="third"><span>3</span></li>
+    <li class="list-step" id="fourth"><span>4</span></li>
+    <li class="list-step" id="fifth"><span>5</span></li>
 </ul>
 <section class="input__box">
         <div class="box__step">Prima intrebare</div>
@@ -22,9 +22,10 @@
         <p class="box__p">Lorem ipsum dolor sit amet, vidit tempor molestie sed no, affert antiopam ea sit. ? </p>
         <div class="first__box-field">        
                 <input type="text" class="first-input"  required>
-                <button type="button" class="first-button">Next</button>
+                <button type="button" onclick="changeItem()" class="first-button">Next</button>
         </div>
 </section>
 </form>
 </body>
+<script src="assets/js/style.js"></script>
 </html>
