--- a/listingForm.html
+++ b/listingForm.html
@@ -16,13 +16,13 @@
     <li class="list-step" id="fourth"><span>4</span></li>
     <li class="list-step" id="fifth"><span>5</span></li>
 </ul>
-<section class="input__box">
-        <div class="box__step">Prima intrebare</div>
-        <h1 class="box__h1">Public Study</h1>
-        <p class="box__p">Lorem ipsum dolor sit amet, vidit tempor molestie sed no, affert antiopam ea sit. ? </p>
-        <div class="first__box-field">        
-                <input type="text" class="first-input"  required>
-                <button type="button" onclick="changeItem()" class="first-button">Next</button>
+<section class="form__section">
+        <div class="form__section--curentQuestion">Prima intrebare</div>
+        <h1 class="form__section--h1">Public Study</h1>
+        <p class="form__section--p">Lorem ipsum dolor sit amet, vidit tempor molestie sed no, affert antiopam ea sit. ? </p>
+        <div class="form__section--inputWrapper">        
+                <input type="text"  class="form__section--input"  required>
+                <button type="button" onclick="changeItem()" class="form__section--button">Next</button>
         </div>
 </section>
 </form>
