--- a/places.html
+++ b/places.html
@@ -27,84 +27,88 @@
 
   <main class="main-content">
     <section class="allPlaces">
-      <div class="grid">
+      <div class="grid--twoColumns">
 
-          <a href="#" class="grid__item">
-              <article class="card">
-                <div class="card__content">
-                      <h2 class="card__title">Carturesti</h2>
-                      <ul class="card__content--info">
-                        <li>Favourite language-Java</li>
-                        <li>Most active colaborator- Gelu Popescu Al Treilea</li>
-                      </ul>
-                </div>
-                <aside class="card__image"></aside>
-              </article>
-            </a>
+        <a href="#" class="grid__item">
+          <article class="card">
+            <div class="card__content">
+                  <h2 class="card__title">Carturesti</h2>
+                  <ul class="card__content--info">
+                      <li class="card__content--li">Favourite language-Java</li>
+                      <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
+                  </ul>
+            </div>
+            <aside class="card__image"></aside>
+          </article>
+        </a>
 
-            <a href="#" class="grid__item">
-                <article class="card">
-                  <div class="card__content">
-                        <h2 class="card__title">Carturesti</h2>
-                        <ul class="card__content--info">
-                          <li>Favourite language-Java</li>
-                          <li>Most active colaborator- Gelu Popescu Al Treilea</li>
-                        </ul>
-                  </div>
-                  <aside class="card__image"></aside>
-                </article>
-              </a>
+        <a href="#" class="grid__item">
+          <article class="card">
+            <div class="card__content">
+                  <h2 class="card__title">Carturesti</h2>
+                  <ul class="card__content--info">
+                      <li class="card__content--li">Favourite language-Java</li>
+                      <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
+                  </ul>
+            </div>
+            <aside class="card__image"></aside>
+          </article>
+        </a>
 
-              <a href="#" class="grid__item">
-                  <article class="card">
-                    <div class="card__content">
-                          <h2 class="card__title">Carturesti</h2>
-                          <ul class="card__content--info">
-                            <li>Favourite language-Java</li>
-                            <li>Most active colaborator- Gelu Popescu Al Treilea</li>
-                          </ul>
-                    </div>
-                    <aside class="card__image"></aside>
-                  </article>
-                </a>
 
-                <a href="#" class="grid__item">
-                    <article class="card">
-                      <div class="card__content">
-                            <h2 class="card__title">Carturesti</h2>
-                            <ul class="card__content--info">
-                              <li>Favourite language-Java</li>
-                              <li>Most active colaborator- Gelu Popescu Al Treilea</li>
-                            </ul>
-                      </div>
-                      <aside class="card__image"></aside>
-                    </article>
-                  </a>
+        <a href="#" class="grid__item">
+          <article class="card">
+            <div class="card__content">
+                  <h2 class="card__title">Carturesti</h2>
+                  <ul class="card__content--info">
+                      <li class="card__content--li">Favourite language-Java</li>
+                      <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
+                  </ul>
+            </div>
+            <aside class="card__image"></aside>
+          </article>
+        </a>
+  
 
-                  <a href="#" class="grid__item">
-                      <article class="card">
-                        <div class="card__content">
-                              <h2 class="card__title">Carturesti</h2>
-                              <ul class="card__content--info">
-                                <li>Favourite language-Java</li>
-                                <li>Most active colaborator- Gelu Popescu Al Treilea</li>
-                              </ul>
-                        </div>
-                        <aside class="card__image"></aside>
-                      </article>
-                    </a>
-                    <a href="#" class="grid__item">
-                        <article class="card">
-                          <div class="card__content">
-                                <h2 class="card__title">Carturesti</h2>
-                                <ul class="card__content--info">
-                                    <li>Favourite language-Java</li>
-                                    <li>Most active colaborator- Gelu Popescu Al Treilea</li>
-                                </ul>
-                          </div>
-                          <aside class="card__image"></aside>
-                        </article>
-                      </a>
+        <a href="#" class="grid__item">
+          <article class="card">
+            <div class="card__content">
+                  <h2 class="card__title">Carturesti</h2>
+                  <ul class="card__content--info">
+                      <li class="card__content--li">Favourite language-Java</li>
+                      <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
+                  </ul>
+            </div>
+            <aside class="card__image"></aside>
+          </article>
+        </a>
+    
+
+        <a href="#" class="grid__item">
+          <article class="card">
+            <div class="card__content">
+                  <h2 class="card__title">Carturesti</h2>
+                  <ul class="card__content--info">
+                      <li class="card__content--li">Favourite language-Java</li>
+                      <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
+                  </ul>
+            </div>
+            <aside class="card__image"></aside>
+          </article>
+        </a>
+
+        <a href="#" class="grid__item">
+          <article class="card">
+            <div class="card__content">
+                  <h2 class="card__title">Carturesti</h2>
+                  <ul class="card__content--info">
+                      <li class="card__content--li">Favourite language-Java</li>
+                      <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
+                  </ul>
+            </div>
+            <aside class="card__image"></aside>
+          </article>
+        </a>
       </div>
     </section>
   </main>
