--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
               <div class="card__content">
                     <h2 class="card__title">Carturesti</h2>
                     <ul class="card__content--info">
-                      <li>Favourite language-Java</li>
-                      <li>Most active colaborator- Gelu Popescu Al Treilea</li>
+                        <li class="card__content--li">Favourite language-Java</li>
+                        <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
                     </ul>
               </div>
               <aside class="card__image"></aside>
@@ -59,56 +59,72 @@
           </a>
 
           <a href="#" class="grid__item">
-              <article class="card">
-                <div class="card__content">
-                      <h2 class="card__title">Carturesti</h2>
-                      <ul class="card__content--info">
-                        <li>Favourite language-Java</li>
-                        <li>Most active colaborator- Gelu Popescu Al Treilea</li>
-                      </ul>
-                </div>
-                <aside class="card__image"></aside>
-              </article>
-            </a>
+            <article class="card">
+              <div class="card__content">
+                    <h2 class="card__title">Carturesti</h2>
+                    <ul class="card__content--info">
+                        <li class="card__content--li">Favourite language-Java</li>
+                        <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
+                    </ul>
+              </div>
+              <aside class="card__image"></aside>
+            </article>
+          </a>
+  
 
           <a href="#" class="grid__item">
-                <article class="card">
-                  <div class="card__content">
-                        <h2 class="card__title">Carturesti</h2>
-                        <ul class="card__content--info">
-                          <li>Favourite language-Java</li>
-                          <li>Most active colaborator- Gelu Popescu Al Treilea</li>
-                        </ul>
-                  </div>
-                  <aside class="card__image"></aside>
-                </article>
-            </a>
+            <article class="card">
+              <div class="card__content">
+                    <h2 class="card__title">Carturesti</h2>
+                    <ul class="card__content--info">
+                        <li class="card__content--li">Favourite language-Java</li>
+                        <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
+                    </ul>
+              </div>
+              <aside class="card__image"></aside>
+            </article>
+          </a>
+    
 
-            <a href="#" class="grid__item">
-                <article class="card">
-                  <div class="card__content">
-                        <h2 class="card__title">Carturesti</h2>
-                        <ul class="card__content--info">
-                          <li>Favourite language-Java</li>
-                          <li>Most active colaborator- Gelu Popescu Al Treilea</li>
-                        </ul>
-                  </div>
-                  <aside class="card__image"></aside>
-                </article>
-            </a>
+          <a href="#" class="grid__item">
+            <article class="card">
+              <div class="card__content">
+                    <h2 class="card__title">Carturesti</h2>
+                    <ul class="card__content--info">
+                        <li class="card__content--li">Favourite language-Java</li>
+                        <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
+                    </ul>
+              </div>
+              <aside class="card__image"></aside>
+            </article>
+          </a>
+      
 
-            <a href="#" class="grid__item">
-                <article class="card">
-                  <div class="card__content">
-                        <h2 class="card__title">Carturesti</h2>
-                        <ul class="card__content--info">
-                          <li>Favourite language-Java</li>
-                          <li>Most active colaborator- Gelu Popescu Al Treilea</li>
-                        </ul>
-                  </div>
-                  <aside class="card__image"></aside>
-                </article>
-             </a>
+          <a href="#" class="grid__item">
+            <article class="card">
+              <div class="card__content">
+                    <h2 class="card__title">Carturesti</h2>
+                    <ul class="card__content--info">
+                        <li class="card__content--li">Favourite language-Java</li>
+                        <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
+                    </ul>
+              </div>
+              <aside class="card__image"></aside>
+            </article>
+          </a>
+
+          <a href="#" class="grid__item">
+            <article class="card">
+              <div class="card__content">
+                    <h2 class="card__title">Carturesti</h2>
+                    <ul class="card__content--info">
+                        <li class="card__content--li">Favourite language-Java</li>
+                        <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
+                    </ul>
+              </div>
+              <aside class="card__image"></aside>
+            </article>
+          </a>
 
         </div>
       </section>
