--- a/listingForm.html
+++ b/listingForm.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Form</title>
 </head>
+<header class="header">
+                <div class="title">
+                  <a class="title-text" href="#">
+                    <h1 class="title-text__h1">Public Study</h1>
+                    <h3 class="title-text__h3">Meet study mates</h3>
+                  </a>
+                  <ul class="nav nav--main">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="listings.html">Listings</a></li>
+                    <li><a href="places.html">Places</a></li>
+                    <li><a href="account.html">Account</a></li>
+                    <li><a href="about.html">About</a></li>
+                  </ul>
+                  <div class="nav--dropdown">
+                    <div class="dropdown__button"><a href="#">Sign in</a></div>
+                    <div class="dropdown__content">
+                      <ul>
+                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">Twitter</a></li>
+                        <li><a href="#">Gmail</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+</header>
 <body>
 <form  class="listings__form">
 <ul class="listings__form-list">
@@ -16,8 +41,8 @@
     <li class="list-step" id="fourth"><span>4</span></li>
     <li class="list-step" id="fifth"><span>5</span></li>
 </ul>
-<section class="form__section">
-        <div class="form__section--curentQuestion">Prima intrebare</div>
+<section id="firstQuestion" class="form__section">
+        <div class="form__section--curentQuestion">First question</div>
         <h1 class="form__section--h1">Public Study</h1>
         <p class="form__section--p">Lorem ipsum dolor sit amet, vidit tempor molestie sed no, affert antiopam ea sit. ? </p>
         <div class="form__section--inputWrapper">        
@@ -25,7 +50,44 @@
                 <button type="button" onclick="changeItem()" class="form__section--button">Next</button>
         </div>
 </section>
+<section  id="secondQuestion" class="form__section">
+                <div class="form__section--curentQuestion">Second question</div>
+                <h1 class="form__section--h1">Public Study</h1>
+                <p class="form__section--p">Lorem ipsum dolor sit amet, vidit tempor molestie sed no, affert antiopam ea sit. ? </p>
+                <div class="form__section--inputWrapper">        
+                        <input type="text"  class="form__section--input"  required>
+                        <button type="button" onclick="changeItem()" class="form__section--button">Next</button>
+                </div>
+</section>
+<section  id="thirdQuestion" class="form__section">
+                <div class="form__section--curentQuestion">Third question</div>
+                <h1 class="form__section--h1">Public Study</h1>
+                <p class="form__section--p">Lorem ipsum dolor sit amet, vidit tempor molestie sed no, affert antiopam ea sit. ? </p>
+                <div class="form__section--inputWrapper">        
+                        <input type="text"  class="form__section--input"  required>
+                        <button type="button" onclick="changeItem()" class="form__section--button">Next</button>
+                </div>
+</section>
+<section  id="fourthQuestion" class="form__section">
+                <div class="form__section--curentQuestion">Fourth question</div>
+                <h1 class="form__section--h1">Public Study</h1>
+                <p class="form__section--p">Lorem ipsum dolor sit amet, vidit tempor molestie sed no, affert antiopam ea sit. ? </p>
+                <div class="form__section--inputWrapper">        
+                        <input type="text"  class="form__section--input"  required>
+                        <button type="button" onclick="changeItem()" class="form__section--button">Next</button>
+                </div>
+</section>
+<section id="fifthQuestion" class="form__section">
+                <div class="form__section--curentQuestion">Fifth question</div>
+                <h1 class="form__section--h1">Public Study</h1>
+                <p class="form__section--p">Lorem ipsum dolor sit amet, vidit tempor molestie sed no, affert antiopam ea sit. ? </p>
+                <div class="form__section--inputWrapper">        
+                        <input type="text"  class="form__section--input"  required>
+                        <button type="button" onclick="changeItem()" class="form__section--button">Next</button>
+                </div>
+</section>
+
 </form>
 </body>
-<script src="assets/js/style.js"></script>
+<script src="assets/js/addListing.js"></script>
 </html>
