Added some media queries

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 
     <main class="main-content">
       <section class="places">
-        <div class="grid">
-          
+        <div class="grid--main--page">
           <a href="#" class="grid__item">
             <article class="card">
               <div class="card__content">
@@ -112,20 +111,6 @@
               <aside class="card__image"></aside>
             </article>
           </a>
-
-          <a href="#" class="grid__item">
-            <article class="card">
-              <div class="card__content">
-                    <h2 class="card__title">Carturesti</h2>
-                    <ul class="card__content--info">
-                        <li class="card__content--li">Favourite language-Java</li>
-                        <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
-                    </ul>
-              </div>
-              <aside class="card__image"></aside>
-            </article>
-          </a>
-
         </div>
       </section>
     </main>
