--- a/listingForm.html
+++ b/listingForm.html
@@ -44,7 +44,7 @@
 <section id="firstQuestion" class="form__section">
         <div class="form__section--curentQuestion">First question</div>
         <h1 class="form__section--h1">Public Study</h1>
-        <p class="form__section--p">Lorem ipsum dolor sit amet, vidit tempor molestie sed no, affert antiopam ea sit. ? </p>
+        <p class="form__section--p">Where are you studying? </p>
         <div class="form__section--inputWrapper">        
                 <input type="text"  class="form__section--input"  required>
                 <button type="button" onclick="changeItem()" class="form__section--button">Next</button>
@@ -53,7 +53,7 @@
 <section  id="secondQuestion" class="form__section">
                 <div class="form__section--curentQuestion">Second question</div>
                 <h1 class="form__section--h1">Public Study</h1>
-                <p class="form__section--p">Lorem ipsum dolor sit amet, vidit tempor molestie sed no, affert antiopam ea sit. ? </p>
+                <p class="form__section--p">At what are you studying? </p>
                 <div class="form__section--inputWrapper">        
                         <input type="text"  class="form__section--input"  required>
                         <button type="button" onclick="changeItem()" class="form__section--button">Next</button>
@@ -62,7 +62,7 @@
 <section  id="thirdQuestion" class="form__section">
                 <div class="form__section--curentQuestion">Third question</div>
                 <h1 class="form__section--h1">Public Study</h1>
-                <p class="form__section--p">Lorem ipsum dolor sit amet, vidit tempor molestie sed no, affert antiopam ea sit. ? </p>
+                <p class="form__section--p">What do you specialise in? </p>
                 <div class="form__section--inputWrapper">        
                         <input type="text"  class="form__section--input"  required>
                         <button type="button" onclick="changeItem()" class="form__section--button">Next</button>
@@ -71,7 +71,7 @@
 <section  id="fourthQuestion" class="form__section">
                 <div class="form__section--curentQuestion">Fourth question</div>
                 <h1 class="form__section--h1">Public Study</h1>
-                <p class="form__section--p">Lorem ipsum dolor sit amet, vidit tempor molestie sed no, affert antiopam ea sit. ? </p>
+                <p class="form__section--p">Describe your current project </p>
                 <div class="form__section--inputWrapper">        
                         <input type="text"  class="form__section--input"  required>
                         <button type="button" onclick="changeItem()" class="form__section--button">Next</button>
@@ -80,7 +80,7 @@
 <section id="fifthQuestion" class="form__section">
                 <div class="form__section--curentQuestion">Fifth question</div>
                 <h1 class="form__section--h1">Public Study</h1>
-                <p class="form__section--p">Lorem ipsum dolor sit amet, vidit tempor molestie sed no, affert antiopam ea sit. ? </p>
+                <p class="form__section--p"> Describe your ideal project partner</p>
                 <div class="form__section--inputWrapper">        
                         <input type="text"  class="form__section--input"  required>
                         <button type="button" onclick="changeItem()" class="form__section--button">Next</button>
