reorganized folder structure, renamed some files, added 3 additional pages

--- a/pages/browse-listings.html
+++ b/pages/browse-listings.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="../assets/css/styles.min.css">
   <title>Cinder</title>
 </head>
 
@@ -20,8 +20,8 @@
       </div>
       <ul class="nav nav--main">
         <li><a href="index.html">Home</a></li>
-        <li><a href="listings.html">Listings</a></li>
-        <li><a href="places.html">Places</a></li>
+        <li><a href="browse-listings.html">Listings</a></li>
+        <li><a href="browse-places.html">Places</a></li>
         <li><a href="account.html">Account</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
@@ -32,7 +32,7 @@
     <section class="listings">
 
       <div class="listings__nav">
-        <button  onclick="location.href='listingForm.html';" class="listings__nav--new">New Listing</button>
+        <button  onclick="location.href='add-listing.html';" class="listings__nav--new">New Listing</button>
         <form class="search__wrapper">
           <input type="text" class="search__box" placeholder="Alege locatia" required>
           <input type="submit" class="search__button" value="search">
