--- a/pages/index.html
+++ b/pages/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|IBM+Plex+Sans" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/css/styles.min.css">
 
   <title>Cinder</title>
 </head>
@@ -22,8 +23,8 @@
         </a>
         <ul class="nav nav--main">
           <li><a href="index.html">Home</a></li>
-          <li><a href="listings.html">Listings</a></li>
-          <li><a href="places.html">Places</a></li>
+          <li><a href="browse-listings.html">Listings</a></li>
+          <li><a href="browse-places.html">Places</a></li>
           <li><a href="account.html">Account</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
