--- a/pages/add-listing.html
+++ b/pages/add-listing.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="../assets/css/styles.min.css">
   <title>Form</title>
 </head>
 <header class="header">
@@ -16,8 +16,8 @@
     </a>
     <ul class="nav nav--main">
       <li><a href="index.html">Home</a></li>
-      <li><a href="listings.html">Listings</a></li>
-      <li><a href="places.html">Places</a></li>
+      <li><a href="browse-listings.html">Listings</a></li>
+      <li><a href="browse-places.html">Places</a></li>
       <li><a href="account.html">Account</a></li>
       <li><a href="about.html">About</a></li>
     </ul>
@@ -96,6 +96,7 @@
 
   </form>
 </body>
-<script src="assets/js/addListing.js"></script>
+
+<script src="../assets/js/add-listing.js"></script>
 
 </html>
