--- a/pages/browse-places.html
+++ b/pages/browse-places.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="../assets/css/styles.min.css">
   <title>Cinder</title>
 </head>
 <body>
@@ -14,15 +14,14 @@
           <h1  class="title-text__h1"><a>Public Study</a></h1>
           <h3  class="title-text__h3"><a>-Meet study mates-</a></h3>
           </div>
-       <ul class="nav nav--main">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="listings.html">Listings</a></li>
-            <li><a href="places.html">Places</a></li>
-            <li><a href="account.html">Account</a></li>
-            <li><a href="about.html">About</a></li>
-            
-          </ul>
-        </div>
+        <ul class="nav nav--main">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="browse-listings.html">Listings</a></li>
+          <li><a href="browse-places.html">Places</a></li>
+          <li><a href="account.html">Account</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+      </div>
   </header>
 
   <main class="main-content">
