--- a/pages/add-listing.html
+++ b/pages/add-listing.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/solid.css" integrity="sha384-uKQOWcYZKOuKmpYpvT0xCFAs/wE157X5Ua3H5onoRAOCNkJAMX/6QF0iXGGQV9cP" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/fontawesome.css" integrity="sha384-HU5rcgG/yUrsDGWsVACclYdzdCcn5yU8V/3V84zSrPDHwZEdjykadlgI6RHrxGrJ" crossorigin="anonymous">
   <link rel="stylesheet" href="../assets/css/styles.min.css">
   <title>Form</title>
 </head>
@@ -105,9 +110,11 @@
         <div class="type-wrapper">
           <div class="study"  id="js-study">
              <h3 class="title">Implement</h1>
+             <i class="fas fa-code"></i>
           </div>
           <div class="implement" id="js-implement">
             <h3 class="title">Study</h3>
+            <i class="fas fa-book"></i>
           </div>
         </div>
     </div>
