--- a/pages/index.html
+++ b/pages/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/styles.min.css">
 
-  <title>Cinder</title>
+  <title>MeToo - Home</title>
 </head>
 
 <body>
@@ -39,6 +39,31 @@
           </div>
         </div>
       </div>
+
+      <div class="mobile-header">
+        <button id="js-nav-trigger" class="menu-trigger">
+          <span class="burger-line"></span>
+          <span class="burger-line"></span>
+          <span class="burger-line"></span>
+        </button>
+
+        <h2 class="mobile-title">Public Study</h2>
+      </div>
+      
+      <nav id="js-nav-wrapper" class="mobile-menu-wrapper">
+        <button id="js-nav-close" class="menu-close">
+          <span class="close"></span>
+          <span class="close"></span>
+        </button>
+
+        <ul class="nav--mobile">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="browse-listings.html">Listings</a></li>
+          <li><a href="browse-places.html">Places</a></li>
+          <li><a href="account.html">Account</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main class="main-content">
@@ -130,6 +155,7 @@
       </ul>
     </footer>
   </div>
-</body>
 
+<script src="../assets/js/mobile-nav.js"></script>
+</body>
 </html>
