--- a/pages/about.html
+++ b/pages/about.html
@@ -7,9 +7,8 @@
 
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans" rel="stylesheet">
-
   <link rel="stylesheet" href="../assets/css/styles.min.css">
-  <title>Single listing</title>
+  <title>About</title>
 </head>
 <body>
   <header class="header">
@@ -62,7 +61,7 @@
       </ul>
     </nav>
   </header>
-  
+
   <footer class="footer">
     <ul class="nav nav--footer">
       <li><a href="#">Home</a></li>
