--- a/pages/add-listing.html
+++ b/pages/add-listing.html
@@ -11,36 +11,61 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/solid.css" integrity="sha384-uKQOWcYZKOuKmpYpvT0xCFAs/wE157X5Ua3H5onoRAOCNkJAMX/6QF0iXGGQV9cP" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/fontawesome.css" integrity="sha384-HU5rcgG/yUrsDGWsVACclYdzdCcn5yU8V/3V84zSrPDHwZEdjykadlgI6RHrxGrJ" crossorigin="anonymous">
   <link rel="stylesheet" href="../assets/css/styles.min.css">
-  <title>Form</title>
+  <title>Add a listing!</title>
 </head>
 
 <body class="add__listing">
   <header class="header">
-  
-        <div class="title">
-          <a class="title-text" href="#">
-            <h1 class="title-text__h1">Public Study</h1>
-            <h3 class="title-text__h3">Meet study mates</h3>
-          </a>
-          <ul class="nav nav--main">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="browse-listings.html">Listings</a></li>
-            <li><a href="browse-places.html">Places</a></li>
-            <li><a href="account.html">Account</a></li>
-            <li><a href="about.html">About</a></li>
+    <div class="title">
+      <a class="title-text" href="#">
+        <h1 class="title-text__h1">Public Study</h1>
+        <h3 class="title-text__h3">Meet study mates</h3>
+      </a>
+      <ul class="nav nav--main">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="browse-listings.html">Listings</a></li>
+        <li><a href="browse-places.html">Places</a></li>
+        <li><a href="account.html">Account</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+      <div class="nav--dropdown">
+        <div class="dropdown__button"><a href="#">Sign in</a></div>
+        <div class="dropdown__content">
+          <ul>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Gmail</a></li>
           </ul>
-          <div class="nav--dropdown">
-            <div class="dropdown__button"><a href="#">Sign in</a></div>
-            <div class="dropdown__content">
-              <ul>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">Gmail</a></li>
-              </ul>
-            </div>
-          </div>
         </div>
-      </header>
+      </div>
+    </div>
+
+    <div class="mobile-header">
+      <button id="js-nav-trigger" class="menu-trigger">
+        <span class="burger-line"></span>
+        <span class="burger-line"></span>
+        <span class="burger-line"></span>
+      </button>
+
+      <h2 class="mobile-title">Public Study</h2>
+    </div>
+    
+    <nav id="js-nav-wrapper" class="mobile-menu-wrapper">
+      <button id="js-nav-close" class="menu-close">
+        <span class="close"></span>
+        <span class="close"></span>
+      </button>
+
+      <ul class="nav--mobile">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="browse-listings.html">Listings</a></li>
+        <li><a href="browse-places.html">Places</a></li>
+        <li><a href="account.html">Account</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+    </nav>
+  </header>
+  
   <main class="main-content main-content--add-listing">
   <div class="slider" id="js-slider">
     <form class="listing-form " id="js-listing-implement">
@@ -183,8 +208,9 @@
         </form>
   </div>
   </main>
-</body>
-
+  
+<script src="../assets/js/mobile-nav.js"></script>
 <script src="../assets/js/add-listing.js"></script>
+</body>
 
 </html>
