fixed links between pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans" rel="stylesheet">
-  <link rel="stylesheet" href="../assets/css/styles.min.css">
+  <link rel="stylesheet" href="assets/css/styles.min.css">
 
   <title>MeToo - Home</title>
 </head>
@@ -23,10 +23,10 @@
         </a>
         <ul class="nav nav--main">
           <li><a href="index.html">Home</a></li>
-          <li><a href="browse-listings.html">Listings</a></li>
-          <li><a href="browse-places.html">Places</a></li>
-          <li><a href="account.html">Account</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="pages/browse-listings.html">Listings</a></li>
+          <li><a href="pages/browse-places.html">Places</a></li>
+          <li><a href="pages/account.html">Account</a></li>
+          <li><a href="pages/about.html">About</a></li>
         </ul>
         <div class="nav--dropdown">
           <div class="dropdown__button"><a href="#">Sign in</a></div>
@@ -58,10 +58,10 @@
 
         <ul class="nav--mobile">
           <li><a href="index.html">Home</a></li>
-          <li><a href="browse-listings.html">Listings</a></li>
-          <li><a href="browse-places.html">Places</a></li>
-          <li><a href="account.html">Account</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="pages/browse-listings.html">Listings</a></li>
+          <li><a href="pages/browse-places.html">Places</a></li>
+          <li><a href="pages/account.html">Account</a></li>
+          <li><a href="pages/about.html">About</a></li>
         </ul>
       </nav>
     </header>
@@ -156,6 +156,6 @@
     </footer>
   </div>
 
-<script src="../assets/js/mobile-nav.js"></script>
+<script src="assets/js/mobile-nav.js"></script>
 </body>
 </html>
