--- a/pages/about.html
+++ b/pages/about.html
@@ -18,7 +18,7 @@
         <h3 class="title-text__h3">Meet study mates</h3>
       </a>
       <ul class="nav nav--main">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="browse-listings.html">Listings</a></li>
         <li><a href="browse-places.html">Places</a></li>
         <li><a href="account.html">Account</a></li>
@@ -53,7 +53,7 @@
       </button>
 
       <ul class="nav--mobile">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="browse-listings.html">Listings</a></li>
         <li><a href="browse-places.html">Places</a></li>
         <li><a href="account.html">Account</a></li>
