--- a/pages/browse-listings.html
+++ b/pages/browse-listings.html
@@ -14,14 +14,14 @@
 
 <body class="b--listings">
 
- <header class="header">
+  <header class="header">
     <div class="title">
       <a class="title-text" href="#">
         <h1 class="title-text__h1">Public Study</h1>
         <h3 class="title-text__h3">Meet study mates</h3>
       </a>
       <ul class="nav nav--main">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="browse-listings.html">Listings</a></li>
         <li><a href="browse-places.html">Places</a></li>
         <li><a href="account.html">Account</a></li>
@@ -56,7 +56,7 @@
       </button>
 
       <ul class="nav--mobile">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="browse-listings.html">Listings</a></li>
         <li><a href="browse-places.html">Places</a></li>
         <li><a href="account.html">Account</a></li>
