--- a/pages/single-place.html
+++ b/pages/single-place.html
@@ -63,6 +63,30 @@
     </nav>
   </header>
 
+  <main class="main-content-place">
+    <section class="place-info">
+      <div class="place-grid">
+          <a class="place-grid__item">
+            <img src="../assets/images/carturesti-medium.jpg">
+          </a>
+          <a class="place-grid__item">
+            <h2 class="place-info__title">Carturesti</h2>
+                <ul class="place-info__details">
+                    <li> Favourite language-Java</li>
+                    <li >Most active colaborator- Gelu Popescu Al Treilea</li>
+                </ul>
+          </a>
+          <a class="place-grid__item">
+              <div class="place-listings__button"><li>See Listings</li></div>
+          </a>
+      </div>
+    </section>
+    <section class="place-recommendations">
+        <div class="recommendations-container">
+        </div>
+    </section>
+  </main>
+
   <footer class="footer">
     <ul class="nav nav--footer">
       <li><a href="#">Home</a></li>
