Single Place page structure

--- a/pages/single-place.html
+++ b/pages/single-place.html
@@ -70,14 +70,26 @@
             <img src="../assets/images/carturesti-medium.jpg">
           </a>
           <a class="place-grid__item">
-            <h2 class="place-info__title">Carturesti</h2>
-                <ul class="place-info__details">
-                    <li> Favourite language-Java</li>
-                    <li >Most active colaborator- Gelu Popescu Al Treilea</li>
-                </ul>
+              <h2 class="place-info__title">Carturesti</h2>
+              <div class="place-info__container">
+                  <div class="place-info__colaborator-container">
+                    <h5 class="place-info__colaborator"> Most active colaborator- Dorel</h5>
+                    <img src="../assets/images/user-exemple.jpg">  
+                  </div>
+                  <div class="place-info__details-container">
+                    <h5 class="place-info__details-title"> Other stuff</h5>
+                    <ul class="place-info__details">
+                        <li> Favourite skill-Java</li>
+                        <li >Open listings- 200</li>
+                        <li >Finished listings- 1000</li>
+                    </ul>
+                  </div>
+              </div>   
           </a>
           <a class="place-grid__item">
-              <div class="place-listings__button"><li>See Listings</li></div>
+              <div class="place-listings__button">
+                <h2>See Listings</h2>
+              </div>
           </a>
       </div>
     </section>
