--- a/pages/single-place.html
+++ b/pages/single-place.html
@@ -95,23 +95,23 @@
     </section>
     <section class="place-recommendations">
         <div class="recommendations-container">
-           <div class="recommendations-container--other-page">
+           <div class="single-recomamendation">
               <h5 class="recommendations-container--title">Carturesti</h5>
               <img src="../assets/images/carturesti-medium.jpg">
            </div>
-           <div class="recommendations-container--other-page">
+           <div class="single-recomamendation">
               <h5 class="recommendations-container--title">Asachi</h5>
               <img src="../assets/images/asachi-medium.jpg">
             </div>
-            <div class="recommendations-container--other-page">
+            <div class="single-recomamendation">
               <h5 class="recommendations-container--title">Bcu</h5>
               <img src="../assets/images/bcu-medium.jpg">
             </div>
-            <div class="recommendations-container--other-page">
+            <div class="single-recomamendation">
                <h5 class="recommendations-container--title">College</h5>
                <img src="../assets/images/college-medium.jpg">
             </div>
-            <div class="recommendations-container--other-page">
+            <div class="single-recomamendation">
                 <h5 class="recommendations-container--title">Fablab</h5>
                <img src="../assets/images/fablab-medium.jpg"> 
              </div>
