architecture doc + manifest + prepros small fix

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,10 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
+  <meta name="theme-color" content="#4285f4">
+  
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans" rel="stylesheet">
   <link rel="stylesheet" href="../assets/css/styles.min.css">
+  <link rel="manifest" href="../manifest.json">
 
   <title>MeToo - Home</title>
 </head>
