--- a/src/pages/browse-places.html
+++ b/src/pages/browse-places.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="theme-color" content="#4285f4">
+  
   <link rel="stylesheet" href="../assets/css/styles.min.css">
   <title>Browse - places</title>
 </head>
